--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
   <!-- About -->
   <section id="about">
-    <img src="images/IMG_1539.PNG" alt="Gopi Nath">
+    <img src="D:\one\images\WhatsApp Image 2026-02-03 at 2.53.39 PM.jpeg" alt="Gopi Nath">
     <div>
       <h2>About Me</h2>
       <p>A highly motivated individual with strong fundamentals in computer programming and software development. Proficient in Java, SQL, and real-time system development with hands-on experience in building automation and monitoring solutions. Passionate about solving real-world problems using modern technologies and eager to contribute to innovative engineering teams.</p>
@@ -274,10 +274,10 @@
     <h2>Professional Experience</h2>
     <div class="project">
       <h3>Software Developer | Code Core Global HiTech Solutions</h3>
-      <p>09/2024 – Present, Coimbatore</p>
+      <p>09/2025 – Present, Coimbatore</p>
       <ul>
         <li>Guided trainees in real-world projects and problem-solving.</li>
-        <li>Delivered training on JavaScript, ES6, and OOP.</li>
+        <li>Delivered training on JavaScript, ES6, and OOP,java,python.</li>
       </ul>
     </div>
     <div class="project">
@@ -348,3 +348,4 @@
 
 </body>
 </html>
+
